--- a/notebook/config/swaync/style.css
+++ b/notebook/config/swaync/style.css
@@ -9,8 +9,8 @@
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8), inset 0 0 0 1px #1d2021;
   border-radius: 12.6px;
   margin: 18px;
-  background-color: #282828;
-  color: #ebdbb2;
+  background-color: #2e3440;
+  color: #d8dee9;
   padding: 0;
 }
 
@@ -20,7 +20,7 @@
 }
 
 .floating-notifications.background .notification-row .notification-background .notification.critical {
-  box-shadow: inset 0 0 7px 0 #cc241d;
+  box-shadow: inset 0 0 7px 0 #bf616a;
 }
 
 .floating-notifications.background .notification-row .notification-background .notification .notification-content {
@@ -28,7 +28,7 @@
 }
 
 .floating-notifications.background .notification-row .notification-background .notification .notification-content .summary {
-  color: #ebdbb2;
+  color: #d8dee9;
 }
 
 .floating-notifications.background .notification-row .notification-background .notification .notification-content .time {
@@ -36,7 +36,7 @@
 }
 
 .floating-notifications.background .notification-row .notification-background .notification .notification-content .body {
-  color: #ebdbb2;
+  color: #d8dee9;
 }
 
 .floating-notifications.background .notification-row .notification-background .notification > *:last-child > * {
@@ -45,7 +45,7 @@
 
 .floating-notifications.background .notification-row .notification-background .notification > *:last-child > * .notification-action {
   border-radius: 7px;
-  color: #ebdbb2;
+  color: #d8dee9;
   background-color: #1d2021;
   box-shadow: inset 0 0 0 1px #32302f;
   margin: 7px;
@@ -54,50 +54,50 @@
 .floating-notifications.background .notification-row .notification-background .notification > *:last-child > * .notification-action:hover {
   box-shadow: inset 0 0 0 1px #32302f;
   background-color: #1d2021;
-  color: #ebdbb2;
+  color: #d8dee9;
 }
 
 .floating-notifications.background .notification-row .notification-background .notification > *:last-child > * .notification-action:active {
   box-shadow: inset 0 0 0 1px #32302f;
-  background-color: #83a598;
-  color: #ebdbb2;
+  background-color: #a3be8c;
+  color: #d8dee9;
 }
 
 .floating-notifications.background .notification-row .notification-background .close-button {
   margin: 7px;
   padding: 2px;
   border-radius: 6.3px;
-  color: #282828;
-  background-color: #cc241d;
+  color: #2e3440;
+  background-color: #bf616a;
 }
 
 .floating-notifications.background .notification-row .notification-background .close-button:hover {
-  background-color: #ebdbb2;
-  color: #282828;
+  background-color: #d8dee9;
+  color: #2e3440;
 }
 
 .floating-notifications.background .notification-row .notification-background .close-button:active {
-  background-color: #cc241d;
-  color: #282828;
+  background-color: #bf616a;
+  color: #2e3440;
 }
 
 .control-center {
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8), inset 0 0 0 1px #1d2021;
   border-radius: 12.6px;
   margin: 18px;
-  background-color: #282828;
-  color: #ebdbb2;
+  background-color: #2e3440;
+  color: #d8dee9;
   padding: 14px;
 }
 
 .control-center .widget-title {
-  color: #ebdbb2;
+  color: #d8dee9;
   font-size: 1.3em;
 }
 
 .control-center .widget-title button {
   border-radius: 7px;
-  color: #ebdbb2;
+  color: #d8dee9;
   background-color: #1d2021;
   box-shadow: inset 0 0 0 1px #32302f;
   padding: 8px;
@@ -106,18 +106,18 @@
 .control-center .widget-title button:hover {
   box-shadow: inset 0 0 0 1px #32302f;
   background-color: #98971a;
-  color: #ebdbb2;
+  color: #d8dee9;
 }
 
 .control-center .widget-title button:active {
   box-shadow: inset 0 0 0 1px #32302f;
-  background-color: #83a598;
-  color: #282828;
+  background-color: #a3be8c;
+  color: #2e3440;
 }
 
 .control-center .notification-row .notification-background {
   border-radius: 7px;
-  color: #ebdbb2;
+  color: #d8dee9;
   background-color: #1d2021;
   box-shadow: inset 0 0 0 1px #32302f;
   margin-top: 14px;
@@ -129,7 +129,7 @@
 }
 
 .control-center .notification-row .notification-background .notification.critical {
-  box-shadow: inset 0 0 7px 0 #cc241d;
+  box-shadow: inset 0 0 7px 0 #bf616a;
 }
 
 .control-center .notification-row .notification-background .notification .notification-content {
@@ -137,7 +137,7 @@
 }
 
 .control-center .notification-row .notification-background .notification .notification-content .summary {
-  color: #ebdbb2;
+  color: #d8dee9;
 }
 
 .control-center .notification-row .notification-background .notification .notification-content .time {
@@ -145,7 +145,7 @@
 }
 
 .control-center .notification-row .notification-background .notification .notification-content .body {
-  color: #ebdbb2;
+  color: #d8dee9;
 }
 
 .control-center .notification-row .notification-background .notification > *:last-child > * {
@@ -154,7 +154,7 @@
 
 .control-center .notification-row .notification-background .notification > *:last-child > * .notification-action {
   border-radius: 7px;
-  color: #ebdbb2;
+  color: #d8dee9;
   background-color: #11111b;
   box-shadow: inset 0 0 0 1px #32302f;
   margin: 7px;
@@ -163,43 +163,43 @@
 .control-center .notification-row .notification-background .notification > *:last-child > * .notification-action:hover {
   box-shadow: inset 0 0 0 1px #32302f;
   background-color: #1d2021;
-  color: #ebdbb2;
+  color: #d8dee9;
 }
 
 .control-center .notification-row .notification-background .notification > *:last-child > * .notification-action:active {
   box-shadow: inset 0 0 0 1px #32302f;
-  background-color: #83a598;
-  color: #ebdbb2;
+  background-color: #a3be8c;
+  color: #d8dee9;
 }
 
 .control-center .notification-row .notification-background .close-button {
   margin: 7px;
   padding: 2px;
   border-radius: 6.3px;
-  color: #282828;
-  background-color: #ebdbb2;
+  color: #2e3440;
+  background-color: #d8dee9;
 }
 
 .control-center .notification-row .notification-background .close-button:hover {
-  background-color: #cc241d;
-  color: #282828;
+  background-color: #bf616a;
+  color: #2e3440;
 }
 
 .control-center .notification-row .notification-background .close-button:active {
-  background-color: #cc241d;
-  color: #282828;
+  background-color: #bf616a;
+  color: #2e3440;
 }
 
 .control-center .notification-row .notification-background:hover {
   box-shadow: inset 0 0 0 1px #32302f;
-  background-color: #458588;
-  color: #ebdbb2;
+  background-color: #81a1c1;
+  color: #d8dee9;
 }
 
 .control-center .notification-row .notification-background:active {
   box-shadow: inset 0 0 0 1px #32302f;
-  background-color: #83a598;
-  color: #ebdbb2;
+  background-color: #a3be8c;
+  color: #d8dee9;
 }
 
 progressbar,
@@ -213,12 +213,12 @@ progressbar {
 }
 
 .notification.critical progress {
-  background-color: #cc241d;
+  background-color: #bf616a;
 }
 
 .notification.low progress,
 .notification.normal progress {
-  background-color: #458588;
+  background-color: #81a1c1;
 }
 
 trough {
@@ -266,5 +266,5 @@ trough {
 .widget-dnd > switch slider {
   background: #32302f;
   border-radius: 8px;
-  border: 1px solid #d65d0e;
+  border: 1px solid #ebcb8b;
 }
